[package]
name = "departure"
version = "0.1.0"
edition = "2021"
description = "A flexible logout application for Wayland with Material You theming support"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
gtk4 = "0.7"
gtk4-layer-shell = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
notify = "6.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
dirs = "5.0"
